# GPESCO

./: CMakeLists.txt  README.md
configuration/: CMakeLists.txt  config.h  types.h
dataset/: qlist.txt
dataset/human/query_graph/: query_dense_12_1.graph  query_dense_12_10.graph  query_dense_12_100.graph  query_dense_12_101.graph  query_dense_12_102.graph  query_dense_12_103.graph  query_dense_12_104.graph  query_dense_12_105.graph  query_dense_12_106.graph  query_dense_12_107.graph  query_dense_12_108.graph  query_dense_12_109.graph  query_dense_12_11.graph  query_dense_12_110.graph  query_dense_12_111.graph  query_dense_12_112.graph  query_dense_12_113.graph  query_dense_12_114.graph  query_dense_12_115.graph  (+1719 more)
graph/: CMakeLists.txt  graph.cpp  graph.h
matching/: CMakeLists.txt  crqEnum.cpp  crqEnum.h  crqSampling.cpp  crqSampling.h  drqEnum.cpp  drqEnum.h  drqSampling.cpp  drqSampling.h  encoder.cpp  encoder.h  encoderSP.cpp  encoderSP.h  engine.cpp  execution_tree.cpp  execution_tree.h  execution_tree_node.cpp  execution_tree_node.h  matchingcommand.cpp  matchingcommand.h  preprocessor.cpp  preprocessor.h  query_plan_generator.cpp  query_plan_generator.h
utility/: CMakeLists.txt  global_variables.cpp  global_variables.h  pretty_print.h
utility/hashjoin/: hash_helpers.h  hashjoins_test.cpp  nop_join.h
utility/leapfrogtriejoin/: leapfrogtriejoin.cpp  leapfrogtriejoin.h
utility/nucleus_decomposition/: nd_interface.cpp  nd_interface.h
utility/primitive/: nlf_filter.cpp  projection.cpp  projection.h  scan.h
utility/relation/: catalog.h  streaming_type.h
(+1 files in other folders)
